alteração nas comparações da função fonte (mais generalizada)

--- a/campos_de_vel.ipynb
+++ b/campos_de_vel.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "id": "0pc0pRhbhm-d"
    },
@@ -21,17 +21,12 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "plt.style.use(\"ggplot\")\n",
-    "\n",
-    "Nx = 300    ## numero de colunas\n",
-    "Nz = 300    ## numero de linhas\n",
-    "dx = 10     ## largura da malha\n",
-    "vel = np.zeros((Nz, Nx), float) ## matriz de velocidades"
+    "plt.style.use(\"ggplot\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,35 +118,12 @@
     "    plt.show()\n",
     "\n",
     "    return\n",
-    "\n",
-    "def salva_arquivo(nome_do_arquivo, Nx, Nz, dx, vel):\n",
-    "\n",
-    "    file = open(nome_do_arquivo, \"w\")\n",
-    "    \n",
-    "    file.write(\"{} {} {}\\n\".format(Nx, Nz, dx))\n",
-    "    \n",
-    "    for i in range(Nx):\n",
-    "        for j in range(Nz):\n",
-    "            file.write(\"{} \".format(vel[j][i]))\n",
-    "        \n",
-    "    file.close()\n",
-    "    \n",
-    "    return\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo_planos_paralelos(vel)\n",
-    "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, dx, vel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +167,49 @@
     "            else:\n",
     "                vel[j][i] = 2000\n",
     "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def salva_arquivo(nome_do_arquivo, Nx, Nz, dx, vel):\n",
+    "\n",
+    "    file = open(nome_do_arquivo, \"w\")\n",
+    "    \n",
+    "    file.write(\"{} {} {}\\n\".format(Nx, Nz, dx))\n",
+    "    \n",
+    "    for i in range(Nx):\n",
+    "        for j in range(Nz):\n",
+    "            file.write(\"{} \".format(vel[j][i]))\n",
+    "        \n",
+    "    file.close()\n",
+    "    \n",
+    "    return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Nx = 3000    ## numero de colunas\n",
+    "Nz = 3000    ## numero de linhas\n",
+    "dx = 1     ## largura da malha\n",
+    "vel = np.zeros((Nz, Nx), float) ## matriz de velocidades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_planos_paralelos(vel)\n",
+    "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, dx, vel)"
    ]
   }
  ],
