Modificação parametros da função de absorção

--- a/campos_de_vel.ipynb
+++ b/campos_de_vel.ipynb
@@ -43,8 +43,15 @@
     "        for j in range(int(2*Nz/3), Nz):\n",
     "            vel[j][i] = 3000\n",
     "\n",
-    "    return vel\n",
-    "\n",
+    "    return vel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def modelo_semicirculo(vel):\n",
     "    \n",
     "    for i in range(Nx):\n",
@@ -62,8 +69,15 @@
     "            else:\n",
     "                vel[j][i] = 3000\n",
     "    \n",
-    "    return vel\n",
-    "\n",
+    "    return vel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def modelo_camada_dobrada(vel):\n",
     "    \n",
     "    raio = Nz/2;\n",
@@ -83,8 +97,15 @@
     "            else:\n",
     "                vel[j][i] = 3500\n",
     "    \n",
-    "    return vel\n",
-    "\n",
+    "    return vel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def modelo_reservatorio(vel):\n",
     "    \n",
     "    me = 70\n",
@@ -107,8 +128,15 @@
     "            else:\n",
     "                vel[j][i] = 4000\n",
     "                \n",
-    "    return vel\n",
-    "        \n",
+    "    return vel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def visualizar_campos(vel):\n",
     "    \n",
     "    plt.figure(figsize=(7, 7))\n",
@@ -117,8 +145,7 @@
     "    plt.grid(False)\n",
     "    plt.show()\n",
     "\n",
-    "    return\n",
-    "\n"
+    "    return"
    ]
   },
   {
@@ -171,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,24 +219,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nx = 3000    ## numero de colunas\n",
-    "Nz = 3000    ## numero de linhas\n",
-    "dx = 1     ## largura da malha\n",
+    "## parametros\n",
+    "Nx = 300    ## numero de colunas\n",
+    "Nz = 300     ## numero de linhas\n",
+    "dx = 10    ## largura da malha\n",
     "vel = np.zeros((Nz, Nx), float) ## matriz de velocidades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelo_planos_paralelos(vel)\n",
     "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, dx, vel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_semicirculo(vel)\n",
+    "salva_arquivo(\"semicirculo.txt\", Nx, Nz, dx, vel)"
    ]
   }
  ],
