modelos de vel agora possuem as informacoes do tempo

--- a/campos_de_vel.ipynb
+++ b/campos_de_vel.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,15 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def salva_arquivo(nome_do_arquivo, Nx, Nz, dx, vel):\n",
+    "def salva_arquivo(nome_do_arquivo, Nx, Nz, Nt, dx, dt, vel):\n",
     "\n",
     "    file = open(nome_do_arquivo, \"w\")\n",
     "    \n",
-    "    file.write(\"{} {} {}\\n\".format(Nx, Nz, dx))\n",
+    "    file.write(\"{} {} {} {} {}\\n\".format(Nx, Nz, Nt, dx, dt))\n",
     "    \n",
     "    for i in range(Nx):\n",
     "        for j in range(Nz):\n",
@@ -219,25 +219,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "## parametros\n",
     "Nx = 300    ## numero de colunas\n",
-    "Nz = 300     ## numero de linhas\n",
-    "dx = 10    ## largura da malha\n",
+    "Nz = 300    ## numero de linhas\n",
+    "Nt = 8000   ## iteracoes no tempo\n",
+    "dx = 10     ## largura da malha\n",
+    "dt = 0.00025\n",
     "vel = np.zeros((Nz, Nx), float) ## matriz de velocidades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelo_planos_paralelos(vel)\n",
-    "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, dx, vel)"
+    "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, Nt, dx, dt, vel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_semicirculo(vel)\n",
+    "salva_arquivo(\"semicirculo.txt\", Nx, Nz, Nt, dx, dt, vel)"
    ]
   },
   {
@@ -246,8 +258,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelo_semicirculo(vel)\n",
-    "salva_arquivo(\"semicirculo.txt\", Nx, Nz, dx, vel)"
+    "modelo_camada_dobrada(vel)\n",
+    "salva_arquivo(\"camada_dobrada.txt\", Nx, Nz, Nt, dx, dt, vel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_reservatorio(vel)\n",
+    "salva_arquivo(\"reservatorio.txt\", Nx, Nz, Nt, dx, dt, vel)"
    ]
   }
  ],
