implementing vtk imageData format for input

--- a/scripts/generate_input.ipynb
+++ b/scripts/generate_input.ipynb
@@ -6,14 +6,14 @@
     "id": "RbWPu44Yim3h"
    },
    "source": [
-    "# Campos de velocidades\n",
-    "---\n",
-    "Alguns exemplos de campos de velocidade. \n"
+    "## Generating velocity fields for acwv\n",
+    "\n",
+    "`acwv` uses VTK file format, with ImageData structure, to store the velocity fields. This notebook shows how to generate these files.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "0pc0pRhbhm-d"
    },
@@ -30,91 +30,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def modelo_planos_paralelos(vel):\n",
-    "    \n",
+    "def modelo_planos_paralelos(vel, Nx, Nz):\n",
     "    for i in range(Nx):\n",
-    "    \n",
     "        for j in range(int(Nz/3)):\n",
     "            vel[j][i] = 1500\n",
-    "\n",
     "        for j in range(int(Nz/3), int(2*Nz/3)):\n",
     "            vel[j][i] = 2000\n",
-    "\n",
     "        for j in range(int(2*Nz/3), Nz):\n",
     "            vel[j][i] = 3000\n",
+    "    return vel\n",
     "\n",
-    "    return vel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def modelo_semicirculo(vel):\n",
-    "    \n",
+    "def modelo_semicirculo(vel, Nx, Nz):\n",
     "    for i in range(Nx):\n",
     "        for j in range(Nz):\n",
-    "\n",
     "            raio = Nx/2\n",
     "            circulo = -np.sqrt((raio**2)-(i - raio)**2) + Nz\n",
-    "\n",
     "            if j < Nz/3:\n",
     "                vel[j][i] = 1500\n",
-    "\n",
     "            elif j < circulo and j >= Nz/3:\n",
     "                vel[j][i] = 2000\n",
-    "\n",
     "            else:\n",
     "                vel[j][i] = 3000\n",
-    "    \n",
-    "    return vel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def modelo_camada_dobrada(vel):\n",
-    "    \n",
-    "    raio = Nz/2;\n",
-    "    \n",
-    "    for i in range(Nx):\n",
+    "    return vel\n",
     "\n",
+    "def modelo_camada_dobrada(vel, Nx, Nz):\n",
+    "    raio = Nz/2;\n",
+    "    for i in range(Nx):\n",
     "        if i < raio:\n",
     "            area = np.sqrt(raio**2 - i**2) + Nz/2\n",
     "        else:\n",
     "            area = -np.sqrt(raio**2 - (i - Nx)**2) + Nz/2\n",
-    "\n",
     "        for j in range(Nz):\n",
-    "\n",
     "            if j < area:\n",
     "                vel[j][i] = 2500\n",
-    "\n",
     "            else:\n",
     "                vel[j][i] = 3500\n",
-    "    \n",
-    "    return vel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def modelo_reservatorio(vel):\n",
-    "    \n",
-    "    me = 70\n",
+    "    return vel\n",
     "\n",
+    "def modelo_reservatorio(vel, Nx, Nz):\n",
+    "    me = 70\n",
     "    for i in range(Nx):\n",
     "        for j in range(Nz):\n",
-    "\n",
     "            y = (8*me**3)/(i**2 + 4*me**2) ## regiao do reservatorio\n",
-    "\n",
     "            if j <= y:\n",
     "                vel[j][i] = 1500\n",
     "            elif j > y and j < me:\n",
@@ -127,60 +84,27 @@
     "                vel[j][i] = 3500\n",
     "            else:\n",
     "                vel[j][i] = 4000\n",
-    "                \n",
-    "    return vel\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return vel\n",
+    "\n",
     "def visualizar_campos(vel):\n",
-    "    \n",
     "    plt.figure(figsize=(7, 7))\n",
     "    im = plt.imshow(vel, cmap='viridis')\n",
     "    plt.colorbar(im)\n",
     "    plt.grid(False)\n",
     "    plt.show()\n",
     "\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def slit(vel):\n",
-    "    \n",
     "    mid_x = int(len(vel[0])/2)\n",
     "    mid_y = int(len(vel)/2)\n",
-    "    \n",
     "    thickness = 10\n",
-    "    \n",
     "    for i in range(0, len(vel[0])):\n",
     "        for j in range(0, len(vel)):\n",
-    "            \n",
     "            if j in range(mid_y - thickness, mid_y + thickness) and \\\n",
     "               i not in range(mid_x - thickness, mid_x + thickness):\n",
-    "                \n",
     "                vel[j][i] = 0\n",
-    "            \n",
     "            else:\n",
-    "                \n",
     "                vel[j][i] = 2000\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                \n",
     "def double_slit(vel):\n",
     "    Nx = len(vel[0])\n",
     "    Nz = len(vel)\n",
@@ -193,83 +117,64 @@
     "                vel[j][i] = 0\n",
     "            else:\n",
     "                vel[j][i] = 2000\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                    \n",
     "def salva_arquivo(nome_do_arquivo, Nx, Nz, Nt, dx, dt, vel):\n",
-    "\n",
     "    file = open(nome_do_arquivo, \"w\")\n",
-    "    \n",
     "    file.write(\"{} {} {} {} {}\\n\".format(Nx, Nz, Nt, dx, dt))\n",
-    "    \n",
     "    for i in range(Nx):\n",
     "        for j in range(Nz):\n",
     "            file.write(\"{} \".format(vel[j][i]))\n",
-    "        \n",
     "    file.close()\n",
-    "    \n",
-    "    return\n"
+    "\n",
+    "def saveVtkImageDataXML(fname, Nx, Nz, dx, vel):\n",
+    "    file = open(fname, \"w\")\n",
+    "    file.write(\"<?xml version=\\\"1.0\\\"?>\\n\")\n",
+    "    file.write(\"<VTKFile type=\\\"ImageData\\\" version=\\\"0.1\\\" byte_order=\\\"LittleEndian\\\">\\n\")\n",
+    "    file.write(\"  <ImageData WholeExtent=\\\"0 {} 0 {} 0 {}\\\" Origin=\\\"0 0 0\\\" Spacing=\\\"{} {} {}\\\">\\n\".format(Nx-1, Nz-1, 0, dx, dx, 0))\n",
+    "    file.write(\"    <Piece Extent=\\\"0 {} 0 {} 0 {}\\\">\\n\".format(Nx-1, Nz-1, 0))\n",
+    "    file.write(\"      <PointData Scalars=\\\"velocity\\\">\\n\")\n",
+    "    file.write(\"        <DataArray type=\\\"Float32\\\" Name=\\\"velocity\\\" format=\\\"ascii\\\">\\n\")\n",
+    "    for i in range(Nx):\n",
+    "        for j in range(Nz):\n",
+    "            file.write(\"{} \".format(vel[j][i]))\n",
+    "    file.write(\"\\n\")\n",
+    "    file.write(\"        </DataArray>\\n\")\n",
+    "    file.write(\"      </PointData>\\n\")\n",
+    "    file.write(\"    </Piece>\\n\")\n",
+    "    file.write(\"  </ImageData>\\n\")\n",
+    "    file.write(\"</VTKFile>\\n\")\n",
+    "    file.close()\n",
+    "\n",
+    "def saveVtkImageDataXMLBinary(fname, Nx, Nz, dx, vel):\n",
+    "    file = open(fname, \"wb\")\n",
+    "    file.write(\"<?xml version=\\\"1.0\\\"?>\\n\".encode())\n",
+    "    file.write(\"<VTKFile type=\\\"ImageData\\\" version=\\\"0.1\\\" byte_order=\\\"LittleEndian\\\">\\n\".encode())\n",
+    "    file.write(\"  <ImageData WholeExtent=\\\"0 {} 0 {} 0 {}\\\" Origin=\\\"0 0 0\\\" Spacing=\\\"{} {} {}\\\">\\n\".format(Nx-1, Nz-1, 0, dx, dx, 0).encode())\n",
+    "    file.write(\"    <Piece Extent=\\\"0 {} 0 {} 0 {}\\\">\\n\".format(Nx-1, Nz-1, 0).encode())\n",
+    "    file.write(\"      <PointData Scalars=\\\"velocity\\\">\\n\".encode())\n",
+    "    file.write(\"        <DataArray type=\\\"Float32\\\" Name=\\\"velocity\\\" format=\\\"binary\\\">\\n\".encode())\n",
+    "    vel.tofile(file)\n",
+    "    file.write(\"\\n\".encode())\n",
+    "    file.write(\"        </DataArray>\\n\".encode())\n",
+    "    file.write(\"      </PointData>\\n\".encode())\n",
+    "    file.write(\"    </Piece>\\n\".encode())\n",
+    "    file.write(\"  </ImageData>\\n\".encode())\n",
+    "    file.write(\"</VTKFile>\\n\".encode())\n",
+    "    file.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## parametros\n",
-    "Nx = 300    ## numero de colunas\n",
-    "Nz = 300    ## numero de linhas\n",
-    "Nt = 8000   ## iteracoes no tempo\n",
-    "dx = 10     ## largura da malha\n",
-    "dt = 0.00025\n",
-    "vel = np.zeros((Nz, Nx), float) ## matriz de velocidades"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo_planos_paralelos(vel)\n",
-    "salva_arquivo(\"planos_paralelos.txt\", Nx, Nz, Nt, dx, dt, vel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo_semicirculo(vel)\n",
-    "salva_arquivo(\"semicirculo.txt\", Nx, Nz, Nt, dx, dt, vel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo_camada_dobrada(vel)\n",
-    "salva_arquivo(\"camada_dobrada.txt\", Nx, Nz, Nt, dx, dt, vel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modelo_reservatorio(vel)\n",
-    "salva_arquivo(\"reservatorio.txt\", Nx, Nz, Nt, dx, dt, vel)"
+    "Nx = 300\n",
+    "Nz = 300\n",
+    "dx = 10\n",
+    "vel = np.zeros((Nz, Nx), float)\n",
+    "modelo_planos_paralelos(vel, Nx, Nz)\n",
+    "saveVtkImageDataXML(\"../data/input.vti\", Nx, Nz, dx, vel)"
    ]
   }
  ],
@@ -294,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
